--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "crypto-js": "^4.0.0",
     "core-js": "3.6.5",
+    "crypto-js": "^4.0.0",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-canvas-nest": "^2.0.0",
     "vue-router": "3.0.6",
     "vuex": "^3.5.1"
   },
