--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "2.6.10",
     "vue-canvas-nest": "^2.0.0",
     "vue-router": "3.0.6",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "wl-explorer": "^0.1.9"
   },
   "devDependencies": {
     "autoprefixer": "9.5.1",
