--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "2.4.2",
+    "connect": "3.6.6",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "connect": "3.6.6",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.14.1",
@@ -66,7 +66,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "wl-vue-select": "^0.5.7"
   },
   "browserslist": [
     "> 1%",
