--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^0.20.0",
     "core-js": "3.6.5",
     "crypto-js": "^4.0.0",
+    "echarts": "^4.9.0",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "ora": "^5.1.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-canvas-nest": "^2.0.0",
